snapshot: working through hash issues

--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="css/sfomuseum.maps.css" />				
     </head>
     <body data-abs-root-url-data="">
-	<div id="map" class="map sfomuseum-map" id="map" data-sfomuseum-map-latitude="37.61799" data-sfomuseum-map-longitude="-122.370943" data-sfomuseum-map-zoom="14"></div>
+	<div id="map" class="map sfomuseum-map" id="map" data-sfomuseum-map-latitude="37.61799" data-sfomuseum-map-longitude="-122.370943" data-sfomuseum-map-zoom="14" data-sfomuseum-map-hash="true"></div>
     </body>
     <script type="text/javascript" src="javascript/leaflet.js"></script>
     <script type="text/javascript" src="javascript/leaflet-hash.js"></script>    
