--- a/www/geotag.html
+++ b/www/geotag.html
@@ -12,7 +12,8 @@
 	<link rel="stylesheet" type="text/css" href="css/leaflet.toggle.control.css" />
 	<link rel="stylesheet" type="text/css" href="css/L.Control.Resizer.css" />
 	<link rel="stylesheet" type="text/css" href="css/Leaflet.GeotagPhoto.css" />					
-	<link rel="stylesheet" type="text/css" href="css/sfomuseum.maps.css" />				
+	<link rel="stylesheet" type="text/css" href="css/sfomuseum.maps.css" />
+	<link rel="stylesheet" type="text/css" href="css/sfomuseum.maps.geotag.css" />					
     </head>
     <body data-abs-root-url-data="">
 	<div id="map" class="map sfomuseum-map" id="map" data-sfomuseum-map-latitude="37.61799" data-sfomuseum-map-longitude="-122.370943" data-sfomuseum-map-zoom="14" data-sfomuseum-map-hash="true" data-sfomuseum-map-geotag="true"></div>
